--- a/games/5inter.html
+++ b/games/5inter.html
@@ -28,6 +28,9 @@
          justify-content: center;
          text-align: center;
       }
+      .active {
+         
+      }
      
    </style>
 </head>
