modifying subnav dynamic link

--- a/games/1diamond.html
+++ b/games/1diamond.html
@@ -28,15 +28,6 @@
          justify-content: center;
          text-align: center;
       }
-
-      .game-page-active-wrapper {
-         display: flex;
-         flex-wrap: wrap;
-         gap: 10px;
-         box-shadow: 2px 2px 4px 2px #ccc;
-         overflow-x: scroll;
-      }
-     
    </style>
 </head>
 <body>
@@ -78,6 +69,9 @@
          </a>
       </div>
     </header>
+
+    <!--  Dynamic nav link in Nav-link -->
+    <div class="each-game-active-wrapper"></div>
 
     <nav class="subnav game-page-active-wrapper" id="subnav"></nav>
 
