--- a/games/4metro.html
+++ b/games/4metro.html
@@ -71,6 +71,8 @@
       </div>
     </header>
 
+     <!--  Dynamic nav link in Nav-link -->
+    <div class="each-game-active-wrapper"></div>
     <nav id="subnav"></nav>
 
     <div class="status-message" id="statusMessage">Loading Metro results...</div>
