trying game name in the header

--- a/games/1diamond.html
+++ b/games/1diamond.html
@@ -68,6 +68,8 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h1>DIAMOND</h1>
     </header>
 
     <!--  Dynamic nav link in Nav-link -->
