--- a/games/2peoples.html
+++ b/games/2peoples.html
@@ -69,6 +69,8 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h1>PEOPLES</h1>
     </header>
 
      <!--  Dynamic nav link in Nav-link -->
