--- a/games/5inter.html
+++ b/games/5inter.html
@@ -23,15 +23,11 @@
 
    <style>
       body {
-                 position: relative;
-
          display: flex;
          flex-direction: column;
          justify-content: center;
          text-align: center;
       }
-    
-     
    </style>
 </head>
 <body>
@@ -72,6 +68,8 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h1>INTERNATIONAL</h1>
     </header>
 
       <!--  Dynamic nav link in Nav-link -->
