add new subnav to tuesday games

--- a/games/13vag.html
+++ b/games/13vag.html
@@ -69,6 +69,8 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h1>VAG</h1>
     </header>
 
     <nav id="subnav"></nav>
