--- a/games/1diamond.html
+++ b/games/1diamond.html
@@ -75,7 +75,7 @@
     <!--  Dynamic nav link in Nav-link -->
     <div class="each-game-active-wrapper"></div>
 
-    <nav class="subnav game-page-active-wrapper" id="subnav"></nav>
+    <nav class="subnav" id="subnav"></nav>
 
     <div class="status-message" id="statusMessage">Loading Diamond results...</div>
     <main id="gameContainer"></main>
