--- a/games/22bonanza.html
+++ b/games/22bonanza.html
@@ -66,8 +66,12 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h1>BONANZA</h1>
    </header>
-  <nav id="subnav"></nav>
+    <!--  Dynamic nav link in Nav-link -->
+    <div class="each-game-active-wrapper"></div>
+   <nav id="subnav"></nav>
 
   <div class="status-message" id="statusMessage" aria-live="polite">Loading Bonanza results...</div>
   <main id="gameContainer"></main>
