--- a/games/8jackpot.html
+++ b/games/8jackpot.html
@@ -69,8 +69,12 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h1>JACKPOT</h1>
     </header>
 
+     <!--  Dynamic nav link in Nav-link -->
+    <div class="each-game-active-wrapper"></div>
     <nav id="subnav"></nav>
 
     <div class="status-message" id="statusMessage">Loading Jackpot results...</div>
