--- a/games/6gold.html
+++ b/games/6gold.html
@@ -69,8 +69,12 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h1>GOLD</h1>
     </header>
 
+     <!--  Dynamic nav link in Nav-link -->
+    <div class="each-game-active-wrapper"></div>
     <nav id="subnav"></nav>
 
     <div class="status-message" id="statusMessage">Loading Gold results...</div>
