place the new subnav into all the games

--- a/games/13vag.html
+++ b/games/13vag.html
@@ -73,6 +73,8 @@
       <h1>VAG</h1>
     </header>
 
+      <!--  Dynamic nav link in Nav-link -->
+    <div class="each-game-active-wrapper"></div>
     <nav id="subnav"></nav>
 
     <div class="status-message" id="statusMessage">Loading Vag results...</div>
