--- a/games/16fairchance.html
+++ b/games/16fairchance.html
@@ -69,7 +69,11 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h2>FAIRCHANCE</h2>
     </header>
+
+   <div class="each-game-active-wrapper"></div>
 
     <nav id="subnav"></nav>
 
