--- a/games/18msp.html
+++ b/games/18msp.html
@@ -64,8 +64,11 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h2>MPS</h2>
     </header>
 
+   <div class="each-game-active-wrapper"></div>
     <nav id="subnav"></nav>
 
     <div class="status-message" id="statusMessage">Loading Monday Special results...</div>
