--- a/games/19luckyG.html
+++ b/games/19luckyG.html
@@ -69,8 +69,13 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h2>LUCKY-G</h2>
    </header>
-  <nav id="subnav"></nav>
+
+     <!--  Dynamic nav link in Nav-link -->
+    <div class="each-game-active-wrapper"></div>
+   <nav id="subnav"></nav>
 
   <div class="status-message" id="statusMessage">Loading Lucky-G results...</div>
   <main id="gameContainer"></main>
