--- a/games/20midweek.html
+++ b/games/20midweek.html
@@ -67,7 +67,11 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h2>MIDWEEK</h2>
    </header>
+
+   <div class="each-game-active-wrapper"></div>
   <nav id="subnav"></nav>
 
   <div class="status-message" id="statusMessage" aria-live="polite">Loading Midweek results...</div>
