--- a/games/24national.html
+++ b/games/24national.html
@@ -66,8 +66,12 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h2>NATIONAL</h2>
    </header>
-  <nav id="subnav"></nav>
+
+   <div class="each-game-active-wrapper"></div>
+   <nav id="subnav"></nav>
 
   <div class="status-message" id="statusMessage" aria-live="polite">Loading National results...</div>
   <main id="gameContainer"></main>
