--- a/games/25aseda.html
+++ b/games/25aseda.html
@@ -65,7 +65,11 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h2>ASEDA</h2>
    </header>
+
+   <div class="each-game-active-wrapper"></div>
   <nav id="subnav"></nav>
 
   <div class="status-message" id="statusMessage" aria-live="polite">Loading Aseda results...</div>
