--- a/games/12mark-II.html
+++ b/games/12mark-II.html
@@ -69,8 +69,12 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h2>MARK-II</h2>
     </header>
 
+      <!--  Dynamic nav link in Nav-link -->
+    <div class="each-game-active-wrapper"></div>
     <nav id="subnav"></nav>
 
     <div class="status-message" id="statusMessage">Loading Mark-II results...</div>
