--- a/games/21fortune.html
+++ b/games/21fortune.html
@@ -66,7 +66,11 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h2>FORTUNE</h2>
    </header>
+
+   <div class="each-game-active-wrapper"></div>
   <nav id="subnav"></nav>
 
   <div class="status-message" id="statusMessage" aria-live="polite">Loading Fortune results...</div>
