--- a/games/7O6.html
+++ b/games/7O6.html
@@ -69,8 +69,12 @@
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
+
+      <h2>06</h2>
     </header>
 
+      <!--  Dynamic nav link in Nav-link -->
+    <div class="each-game-active-wrapper"></div>
     <nav id="subnav"></nav>
 
     <div class="status-message" id="statusMessage">Loading 06 results...</div>
