added opengraph to tuesday games except Lukcy-g

--- a/games/10super.html
+++ b/games/10super.html
@@ -15,7 +15,22 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <title>Super BabaIjebu Results | Visual Lotto Board</title>
-   <meta name="description" content="Live BabaIjebu draw results for SUPER lotto game.">
+   <meta name="description" content="Premier lotto (Baba Ijebu) SUPER results. Powered by Visual Lotto Board">
+
+   <meta property="og:title" content="Super BabaIjebu Results | Visual Lotto Board">
+   <meta property="og:description" content="Premier lotto (Baba Ijebu) SUPER results. Powered by Visual Lotto Board"> 
+   <meta property="og:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1752820962/super-cover_mfdba3.png"> 
+   <meta property="og:image:alt" content="Baba Ijebu SUPER results"> 
+   <meta  property="og:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/10super">
+
+            <!-- twitter-->
+   <meta name="twitter:card" content="summary">
+   <meta name="twitter:site" content="@VisuaLottoBoard">
+   <meta name="twitter:title" content="Super BabaIjebu Results | Visual Lotto Board">
+   <meta name="twitter:description" content="Premier lotto (Baba Ijebu) SUPER results. Powered by Visual Lotto Board">
+   <meta name="twitter:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1752820962/super-cover_mfdba3.png">
+   <meta name="twitter:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/10super">
+
   
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="../style.css">
