--- a/games/23premierking.html
+++ b/games/23premierking.html
@@ -15,7 +15,21 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <title>Premier King BabaIjebu Results | Visual Lotto Board</title>
-   <meta name="description" content="Live draw results for PREMIER KING lotto game.">
+   <meta name="description" content="Premier lotto (Baba Ijebu) PREMIER KING results. Powered by Visual Lotto Board">
+
+   <meta property="og:title" content="Premier King BabaIjebu Results | Visual Lotto Board">
+   <meta property="og:description" content="Premier lotto (Baba Ijebu) PREMIER KING results. Powered by Visual Lotto Board"> 
+   <meta property="og:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1752820576/Premier-king-cover_g5snsr.png"> 
+   <meta property="og:image:alt" content="Baba Ijebu Premier King results"> 
+   <meta  property="og:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/23premierking">
+
+            <!-- twitter-->
+   <meta name="twitter:card" content="summary">
+   <meta name="twitter:site" content="@VisuaLottoBoard">
+   <meta name="twitter:title" content="Premier King BabaIjebu Results | Visual Lotto Board">
+   <meta name="twitter:description" content="Premier lotto (Baba Ijebu) PREMIER KING results. Powered by Visual Lotto Board">
+   <meta name="twitter:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1752820576/Premier-king-cover_g5snsr.png">
+   <meta name="twitter:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/23premierking">
   
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="../style.css">
