--- a/games/7O6.html
+++ b/games/7O6.html
@@ -16,6 +16,21 @@
 
    <title>06 BabaIjebu Results | Visual Lotto Board</title>
    <meta name="description" content="Live BabaIjebu draw results for 06 lotto game.">
+
+   <meta property="og:title" content="06 BabaIjebu Results | Visual Lotto Board">
+   <meta property="og:description" content="Premier lotto (Baba Ijebu) 06 lotto game. Powered by Visual Lotto Board"> 
+   <meta property="og:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1752863152/06-cover_xpwvlj.png"> 
+   <meta property="og:image:alt" content="Baba Ijebu 06 results"> 
+   <meta  property="og:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/7O6">
+
+            <!-- twitter-->
+   <meta name="twitter:card" content="summary">
+   <meta name="twitter:site" content="@VisuaLottoBoard">
+   <meta name="twitter:title" content="06 BabaIjebu Results | Visual Lotto Board">
+   <meta name="twitter:description" content="Premier lotto (Baba Ijebu) 06 lotto game. Powered by Visual Lotto Board">
+   <meta name="twitter:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1752863152/06-cover_xpwvlj.png">
+   <meta name="twitter:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/7O6">
+
   
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="../style.css">
