modify frequent-number link

--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
          <img class="counterpart-icon" src="https://res.cloudinary.com/ddatfadov/image/upload/v1751107320/iPhone-12-PRO-lottoclassificationchart.visuallottoboard.com_c7aj0w.png" alt="" width="">
       </a>
 
+      <a  class="frequent-number" href="/frequent-number.html" target="_blank">
+         <p class="counterpart-span">Frequent Numbers</p>
+      </a>
+
       <div class="game-links-wrapper">
          <a class="game-link" href="/games/1diamond.html" target="_blank">
             <span class="emoji-icon game-icon" role="img" aria-label="Diamond">💎</span>
