Created result update info

--- a/frequent-number.html
+++ b/frequent-number.html
@@ -6,33 +6,8 @@
    <title>Premier Lotto (Baba Ijebu) Frequent Number | Visual Lotto Board</title>
 
    <style>
-      .search-box {  
-         position: sticky;
-         top: 0;
-         background: #ffffff;
-         padding: 1em;
-         box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-         z-index: 100;
-      }
-      .game-search {
-         width: 100%;
-         padding: 0.5em 1em;
-         font-size: 1em;
-         border: 2px solid #0077cc;
-         border-radius: 6px;
-      }
-
-      .note-box {
-         margin: 2rem 5%;
-         background-color: #f5f5f5;
-      }
-
-      pre {
+      body {
          text-align: center;
-         background-color: #f5f5dc34;
-      }
-      pre span {
-         display: block;
       }
 
       .loading {
@@ -41,10 +16,7 @@
          font-size: 1.5rem;
       }
 
-      .game-section {
-         text-align: center;
-         box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      }
+      
       li {
          list-style-position: inside;
       }
@@ -53,30 +25,13 @@
 </head>
 <body>
     <h1>Top 10 Frequent Number by Games</h1>
-    <div class="search-box" id="searchBox">
-      <input type="text" class="game-search" id="gameSearch" placeholder="🔍 Search game name...">
-   </div>
-
+   
    <main>
-      <div class="note-box">
-         <p>
-            <em>Please note that this is not a prediction or sure number. They are merely numbers that draw most in their respective games.
-               The best way to use them is using your sure number(s) against them
-            </em>
-         </p>
-         <pre>
-            <span>              
-                     Example of How to Play them:
-            </span>
-               10 (against)
-         ....................................
+     <p><strong>Heads up!</strong> The Frequent Numbers feature is now exclusive to Pro users.</p>
 
-               35 64 63 7 16 19 75 68 32 76    
-         </pre>
-      </div>
+<p>To continue accessing this powerful tool, please <a href="https://app.visuallottoboard.com/subscription" target="_blank">upgrade to the Pro package</a>.</p>
 
-      <p class="loading"></p>
-      <section class="game-section" id="gameSection"></section>
+<p>New here? <a href="https://app.visuallottoboard.com/signup" target="_blank">Create your account</a> to explore our features and consider going Pro for deeper insights.</p>
    </main>
 
     <script type="module" src="scripts/frequentNumberInit.js"></script>
