--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
       <!-- Google Tag Manager -->
-         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+         <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
             new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
             j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-         })(window,document,'script','dataLayer','GTM-54JWWN2R');</script>
+         })(window,document,'script','dataLayer','GTM-54JWWN2R');</script> -->
       <!-- End Google Tag Manager -->
 
    
@@ -54,8 +54,8 @@
 </head>
 <body>
       <!-- Google Tag Manager (noscript) -->
-         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54JWWN2R"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+         <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54JWWN2R"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
       <!-- End Google Tag Manager (noscript) -->
    
    
@@ -165,6 +165,8 @@
    <div class="update-meta" id="infoContainer"></div>  
 
    <main class="home-page-main" id="homePageContainer"></main>
+
+   <p class="info" style="font-size: 1.5rem; background-color: red; color: white; text-align: center;">We are having issue updating results. Our technical teams are already working to fix this</p>
 
    <div id="reportModal" class="modal hidden">
       <div class="modal-content">
