Uncomment ads script

--- a/games/18msp.html
+++ b/games/18msp.html
@@ -34,11 +34,11 @@
       <!-- End Google Tag Manager (noscript) -->
 
    <header class="home-page-header" id="homePageHeader">
-      <div class="brand">
+       <div class="brand-wrapper">
          <a href="/" aria-current="page">
-            <img src="https://res.cloudinary.com/ddatfadov/image/upload/v1749649983/VLB_logo_gpiyzr.png" alt="Logo" width="40"/>
+            <img class="brand-logo" src="https://res.cloudinary.com/ddatfadov/image/upload/v1749649983/VLB_logo_gpiyzr.png" alt="Logo" width="40"/>
          </a>
-         <h1>Visual Lotto Board</h1>
+         <span class="brand-name">Visual Lotto Board</span>
       </div>
 
       <div class="actions">
