--- a/games/19luckyG.html
+++ b/games/19luckyG.html
@@ -38,13 +38,12 @@
 
       
    <header class="home-page-header" id="homePageHeader">
-      <div class="brand">
+      <div class="brand-wrapper">
          <a href="/" aria-current="page">
-            <img src="https://res.cloudinary.com/ddatfadov/image/upload/v1749649983/VLB_logo_gpiyzr.png" alt="Logo" width="40"/>
+            <img class="brand-logo" src="https://res.cloudinary.com/ddatfadov/image/upload/v1749649983/VLB_logo_gpiyzr.png" alt="Logo" width="40"/>
          </a>
-
-         <h1>Visual Lotto Board</h1>
-         </div>
+         <span class="brand-name">Visual Lotto Board</span>
+      </div>
 
       <div class="actions">
          <button class="sub-btn" id="subscribeBtn">📬 Subscribe</button>
