--- a/games/8jackpot.html
+++ b/games/8jackpot.html
@@ -7,10 +7,11 @@
             new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
             j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-         })(window,document,'script','dataLayer','GTM-54JWWN2R');</script>
+            })(window,document,'script','dataLayer','GTM-M9582TWK');</script>
       <!-- End Google Tag Manager -->
 
-      
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
+ 
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -34,8 +35,8 @@
 <body>
 
       <!-- Google Tag Manager (noscript) -->
-            <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54JWWN2R"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+             <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M9582TWK"
+          height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- End Google Tag Manager (noscript) -->
 
    <header class="home-page-header" id="homePageHeader">
