reoder counterpart on mobile

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
          <img class="counterpart-icon" src="https://res.cloudinary.com/ddatfadov/image/upload/v1751107320/iPhone-12-PRO-lottoclassificationchart.visuallottoboard.com_c7aj0w.png" alt="" width="">
       </a>
 
-      <a  class="frequent-number" href="/frequent-number.html" target="_blank">
-         <p class="counterpart-span">Frequent Numbers</p>
+      <a href="https://play.google.com/store/apps/details?id=com.visuallottoboard.babaijeburesults" class="download-btn" target="_blank">
+         <p class="counterpart-span">📱 Download mobile app</p>
       </a>
 
       <div class="game-links-wrapper">
