--- a/games/9clubmaster.html
+++ b/games/9clubmaster.html
@@ -15,20 +15,20 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-   <title>Clubmaster BabaIjebu Results | Visual Lotto Board</title>
-   <meta name="description" content="Live BabaIjebu draw results for CLUBMASTER lotto game.">
+   <title>Baba Ijebu CLUB MASTER Results | Visual Lotto Board</title>
+   <meta name="description" content="BabaIjebu (premier) lotto CLUB MASTER results">
 
-   <meta property="og:title" content="Clubmaster BabaIjebu Results | Visual Lotto Board">
-   <meta property="og:description" content="Premier lotto (Baba Ijebu) CLUBMASTER lotto game. Powered by Visual Lotto Board"> 
+   <meta property="og:title" content="BabaIjebu CLUB MASTER Results | Visual Lotto Board">
+   <meta property="og:description" content="Baba Ijebu (premier) lotto CLUB MASTER results"> 
    <meta property="og:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1752863152/clubmaster-cover_xdyo61.png"> 
-   <meta property="og:image:alt" content="Baba Ijebu CLUBMASTER results"> 
+   <meta property="og:image:alt" content="Mobile view of Baba Ijebu CLUB MASTER results"> 
    <meta  property="og:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/9clubmaster">
 
             <!-- twitter-->
    <meta name="twitter:card" content="summary">
    <meta name="twitter:site" content="@VisuaLottoBoard">
-   <meta name="twitter:title" content="Clubmaster BabaIjebu Results | Visual Lotto Board">
-   <meta name="twitter:description" content="Premier lotto (Baba Ijebu) CLUBMASTER lotto game. Powered by Visual Lotto Board">
+   <meta name="twitter:title" content="BabaIjebu CLUB MASTER Results | Visual Lotto Board">
+   <meta name="twitter:description" content="Baba Ijebu (premier) lotto CLUB MASTER results">
    <meta name="twitter:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1752863152/clubmaster-cover_xdyo61.png">
    <meta name="twitter:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/9clubmaster">
 
