--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
    <meta name="description" content="View updated lotto results from 25 games including Diamond, Peoples, Bingo, Jackpot, Super, National, and more. Powered by Visual Lotto Board.">
    <meta name="author" content="Visual Lotto Result" />
 
+         <!-- facebook -->
    <meta property="og:title" content="Baba Ijebu Lotto Results | Visual Lotto Board">
    <meta property="og:description" content="View updated lotto results from 25 games including Diamond, Peoples, Bingo, JAckpot, Super, National, and more. Powered by Visual Lotto Board."> 
    <meta property="og:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1751113131/vlb-v2-free-user-cover_fsl1sl.png"> 
