--- a/games/10super.html
+++ b/games/10super.html
@@ -14,21 +14,21 @@
 
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Baba Ijebu SUPER Results | Visual Lotto Board</title>
+   <meta name="description" content="Baba Ijebu (premier) lotto SUPER results">
 
-   <title>Super BabaIjebu Results | Visual Lotto Board</title>
-   <meta name="description" content="Premier lotto (Baba Ijebu) SUPER results. Powered by Visual Lotto Board">
-
-   <meta property="og:title" content="Super BabaIjebu Results | Visual Lotto Board">
-   <meta property="og:description" content="Premier lotto (Baba Ijebu) SUPER results. Powered by Visual Lotto Board"> 
+               <!-- facebook -->
+   <meta property="og:title" content="Baba Ijebu SUPER Results | Visual Lotto Board">
+   <meta property="og:description" content="Baba Ijebu (premier) lotto SUPER results"> 
    <meta property="og:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1752820962/super-cover_mfdba3.png"> 
-   <meta property="og:image:alt" content="Baba Ijebu SUPER results"> 
+   <meta property="og:image:alt" content="Mobile view of Baba Ijebu Super results"> 
    <meta  property="og:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/10super">
 
             <!-- twitter-->
    <meta name="twitter:card" content="summary">
    <meta name="twitter:site" content="@VisuaLottoBoard">
-   <meta name="twitter:title" content="Super BabaIjebu Results | Visual Lotto Board">
-   <meta name="twitter:description" content="Premier lotto (Baba Ijebu) SUPER results. Powered by Visual Lotto Board">
+   <meta name="twitter:title" content="Baba Ijebu Super Results | Visual Lotto Board">
+   <meta name="twitter:description" content="Baba Ijebu (premier) lotto SUPER results">
    <meta name="twitter:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1752820962/super-cover_mfdba3.png">
    <meta name="twitter:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/10super">
 
