--- a/games/17royal.html
+++ b/games/17royal.html
@@ -15,8 +15,23 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-   <title>Royal BabaIjebu Results | Visual Lotto Board</title>
+   <title>BabaIjebu ROYAL Results | Visual Lotto Board</title>
    <meta name="description" content="Live BabaIjebu draw results for ROYAL lotto game.">
+
+         <!-- facebook -->
+   <meta property="og:title" content="Baba Ijebu ROYAL Results | Visual Lotto Board">
+   <meta property="og:description" content="Baba Ijebu (premier) lotto ROYAL results"> 
+   <meta property="og:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1765490690/premier-Royal-cover_cghdp9.png">
+   <meta property="og:image:alt" content="Mobile view of Baba Ijebu Royal results"> 
+   <meta  property="og:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/17royal">
+
+            <!-- twitter-->
+   <meta name="twitter:card" content="summary">
+   <meta name="twitter:site" content="@VisuaLottoBoard">
+   <meta name="twitter:title" content="Baba Ijebu ROYAL Results | Visual Lotto Board">
+   <meta name="twitter:description" content="Baba Ijebu (premier) lotto ROYAL results">
+   <meta name="twitter:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1765490690/premier-Royal-cover_cghdp9.png">
+   <meta name="twitter:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/17royal">
   
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="../style.css">
