--- a/games/22bonanza.html
+++ b/games/22bonanza.html
@@ -13,9 +13,23 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Baba Ijebu BONANZA Results | Visual Lotto Board</title>
+   <meta name="description" content="Baba Ijebu (premier) lotto BONANZA results">
 
-  <title>Bonanza BabaIjebu Results | Visual Lotto Board</title>
-   <meta name="description" content="Live BabaIjebu draw results for BONANZA lotto game.">
+         <!-- facebook -->
+   <meta property="og:title" content="Baba Ijebu BONANZA Results | Visual Lotto Board">
+   <meta property="og:description" content="Baba Ijebu (premier) lotto BONANZA results"> 
+   <meta property="og:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1765490689/BONANZA-cover_ztw0yh.png"> 
+   <meta property="og:image:alt" content="Mobile view of Baba Ijebu Bonanza results"> 
+   <meta  property="og:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/22bonanza">
+
+            <!-- twitter-->
+   <meta name="twitter:card" content="summary">
+   <meta name="twitter:site" content="@VisuaLottoBoard">
+   <meta name="twitter:title" content="Baba Ijebu BONANZA Results | Visual Lotto Board">
+   <meta name="twitter:description" content="Baba Ijebu (premier) lotto BONANZA results">
+   <meta name="twitter:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1765490689/BONANZA-cover_ztw0yh.png">
+   <meta name="twitter:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/games/22bonanza">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="../style.css">
