added greenLotto website link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="/styles/tableStyles.css" />
-   <!-- <link rel="stylesheet" href="text-icon.css"> -->
   
    <!-- email js -->
    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
@@ -74,6 +73,10 @@
          <button class="sub-btn" id="subscribeBtn">📬 Subscribe</button>
          <button class="login-btn" id="loginBtn">🔐 Login</button>
          <button class="report-btn" id="reportBtn">📄 Report</button>
+      </div>
+
+      <div>
+         <a class="green-lotto-link" href="https://green-lotto-result.visuallottoboard.com" target="_blank">Green Lotto Results</a>
       </div>
 
       <div class="socials">
@@ -160,6 +163,10 @@
             <span class="game-icon">🙏</span>
             <span>Aseda</span>
          </a>
+         <a class="green-lotto-link" href="https://green-lotto-result.visuallottoboard.com" target="_blank">
+            <span>Green Lotto Results</span>
+         </a>
+
       </div>
    </nav>
    
