--- a/games/6gold.html
+++ b/games/6gold.html
@@ -51,6 +51,23 @@
           height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- End Google Tag Manager (noscript) -->
 
+      <!-- AdSense code start-->
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274"
+         crossorigin="anonymous">
+      </script>
+
+      <!-- Baba-Ijebu_Result_Website -->
+         <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-3639147338737274"
+            data-ad-slot="1474692093"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+         <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+         </script>
+      <!-- AdSense code end-->
+
    <header class="home-page-header" id="homePageHeader">
        <div class="brand-wrapper">
          <a href="/" aria-current="page">
