--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
       <!-- End Google Tag Manager (noscript) -->
    
       <!-- AdSense code start-->
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274"
-         crossorigin="anonymous">
-      </script>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
 
       <!-- Baba-Ijebu_Result_Website -->
          <ins class="adsbygoogle"
@@ -215,6 +213,50 @@
             <!-- <p class="info" style="font-size: 1.5rem; background-color: red; color: white; text-align: center;">We are having issue updating results. Our technical teams are already working to fix this</p> -->
 
    </div>
+
+   <footer class="site-footer">
+    <div class="footer-content">
+        <div class="footer-section">
+            <h3>About Our Results</h3>
+            <p>We provide accurate Baba Ijebu (Premier Lotto) results dating back to late 2023. Our mission is to help players track past winning numbers and stay organized with daily game schedules.</p>
+        </div>
+
+        <div class="footer-section">
+            <h3>Quick Links</h3>
+            <ul class="footer-links">
+                <li><a href="/">Home</a></li>
+               <li><a href="https://visuallottoboard.com/contact">Contact Us</a></li>
+                <li><a href="https://visuallottoboard.com/about">About Us</a></li>
+               <li><a href="/game-schedule.html">Game Time-table</a></li>
+               <li><a href="https://green-lotto-result.visuallottoboard.com" target="_blank">Green Lotto Results</a></li>
+               <li><a href="https://lottoclassificationchart.visuallottoboard.com" target="_blank">Lotto Classification Chart</a></li>
+
+
+            </ul>
+        </div>
+
+        <div class="app-download-section">
+            <p style="font-size: 0.8rem; margin-bottom: 8px; color: #fff;">Get the App for instant alerts:</p>
+            <a href="https://play.google.com/store/apps/details?id=com.visuallottoboard.babaijeburesults" target="_blank">
+               <img class="play-store-badge" 
+                     src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" 
+                     alt="Get it on Google Play">
+            </a>
+         </div>
+
+        <div class="footer-section">
+            <h3>Responsible Gaming</h3>
+            <p><span class="eighteen-plus">18+</span> Please play responsibly. Lotto is a game of chance.</p>
+            <div class="disclaimer-box">
+                <strong>Disclaimer:</strong> This website is an independent platform for information purposes only. We are not affiliated with Premier Lotto Limited (Baba Ijebu). Our relationship with Premier Lotto is limited to sub-agent. Always verify results with an official company.
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-bottom">
+        <p>&copy; <span id="year"></span> Visual Lotto Board. All Rights Reserved.</p>
+    </div>
+</footer>
 
    <script type="module" src="/scripts/homeInit.js"></script>
    <script src="/scripts/modal.js"></script>
