--- a/index.html
+++ b/index.html
@@ -90,24 +90,6 @@
       <div>
          <a class="green-lotto-link" href="https://green-lotto-result.visuallottoboard.com" target="_blank">Green Lotto Results</a>
       </div>
-
-      <div class="socials">
-         <a class="media" href="https://twitter.com/visuaLottoBoard" target="_blank" aria-label="connect with us  on our X account" rel="no-referrer">
-            <i class="fa-brands fa-x-twitter" ></i>
-         </a>
-         <a class="media" href="https://www.facebook.com/visuaLottoBoard" target="_blank" aria-label="connect with us on our facebook account">
-            <i class="fa-brands fa-facebook-f"></i>
-         </a>
-         <a class="media" href="https://m.me/109930914660224" target="_blank" aria-label="connect with us on our facebook-messenger">
-            <i class="fa-brands fa-facebook-messenger"></i>
-         </a>
-         <a class="media" href="#">
-            <i class="fa-brands fa-instagram" aria-label="connect with us on our IG story"></i>
-         </a>
-         <a class="media" href="http://www.youtube.com/@VisuaLottoBoard" target="_blank" aria-label="catch our videos on youtube">
-            <i class="fa-brands fa-youtube"></i>
-         </a>
-      </div>
    </header>
 
    <nav class="subnav" id="subnav">
@@ -211,17 +193,16 @@
       </div>
 
             <!-- <p class="info" style="font-size: 1.5rem; background-color: red; color: white; text-align: center;">We are having issue updating results. Our technical teams are already working to fix this</p> -->
-
    </div>
 
    <footer class="site-footer">
-    <div class="footer-content">
-        <div class="footer-section">
+      <div class="footer-content">
+         <div class="footer-section">
             <h3>About Our Results</h3>
             <p>We provide accurate Baba Ijebu (Premier Lotto) results dating back to late 2023. Our mission is to help players track past winning numbers and stay organized with daily game schedules.</p>
-        </div>
+         </div>
 
-        <div class="footer-section">
+         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul class="footer-links">
                 <li><a href="/">Home</a></li>
@@ -230,33 +211,50 @@
                <li><a href="/game-schedule.html">Game Time-table</a></li>
                <li><a href="https://green-lotto-result.visuallottoboard.com" target="_blank">Green Lotto Results</a></li>
                <li><a href="https://lottoclassificationchart.visuallottoboard.com" target="_blank">Lotto Classification Chart</a></li>
-
-
             </ul>
-        </div>
+         </div>
 
-        <div class="app-download-section">
+         <div class="app-download-section">
             <p style="font-size: 0.8rem; margin-bottom: 8px; color: #fff;">Get the App for instant alerts:</p>
             <a href="https://play.google.com/store/apps/details?id=com.visuallottoboard.babaijeburesults" target="_blank">
                <img class="play-store-badge" 
                      src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" 
-                     alt="Get it on Google Play">
+                     alt="Get it on Google Play"
+               >
             </a>
          </div>
 
-        <div class="footer-section">
+         <div class="socials">
+            <a class="media" href="https://twitter.com/visuaLottoBoard" target="_blank" aria-label="connect with us  on our X account" rel="no-referrer">
+               <i class="fa-brands fa-x-twitter" ></i>
+            </a>
+            <a class="media" href="https://www.facebook.com/visuaLottoBoard" target="_blank" aria-label="connect with us on our facebook account">
+               <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a class="media" href="https://m.me/109930914660224" target="_blank" aria-label="connect with us on our facebook-messenger">
+               <i class="fa-brands fa-facebook-messenger"></i>
+            </a>
+            <a class="media" href="#">
+               <i class="fa-brands fa-instagram" aria-label="connect with us on our IG story"></i>
+            </a>
+            <a class="media" href="http://www.youtube.com/@VisuaLottoBoard" target="_blank" aria-label="catch our videos on youtube">
+               <i class="fa-brands fa-youtube"></i>
+            </a>
+         </div>
+
+         <div class="footer-section">
             <h3>Responsible Gaming</h3>
             <p><span class="eighteen-plus">18+</span> Please play responsibly. Lotto is a game of chance.</p>
             <div class="disclaimer-box">
                 <strong>Disclaimer:</strong> This website is an independent platform for information purposes only. We are not affiliated with Premier Lotto Limited (Baba Ijebu). Our relationship with Premier Lotto is limited to sub-agent. Always verify results with an official company.
             </div>
-        </div>
-    </div>
+         </div>
+      </div>
 
-    <div class="footer-bottom">
+      <div class="footer-bottom">
         <p>&copy; <span id="year"></span> Visual Lotto Board. All Rights Reserved.</p>
-    </div>
-</footer>
+      </div>
+   </footer>
 
    <script type="module" src="/scripts/homeInit.js"></script>
    <script src="/scripts/modal.js"></script>
