--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
                <li><a href="/game-schedule.html">Game Time-table</a></li>
                <li><a href="https://green-lotto-result.visuallottoboard.com" target="_blank">Green Lotto Results</a></li>
                <li><a href="https://lottoclassificationchart.visuallottoboard.com" target="_blank">Lotto Classification Chart</a></li>
+               <li><a href="https://blog.visuallottoboard.com" target="_blank">Blog</a></li>
             </ul>
          </div>
 
