--- a/games/1diamond.html
+++ b/games/1diamond.html
@@ -27,6 +27,99 @@
          justify-content: center;
          text-align: center;
       }
+
+      .site-footer {
+        background-color: #222;
+        color: #bbb;
+        padding: 40px 20px 20px;
+        font-family: 'Segoe UI', Tahoma, sans-serif;
+        margin-top: 50px;
+        line-height: 1.6;
+        
+    }
+
+    .footer-content {
+        width: 400px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 30px;
+    }
+
+    .footer-section h3 {
+        color: #fff;
+        margin-bottom: 15px;
+        font-size: 1.1rem;
+        border-bottom: 2px solid #2282c7;
+        display: inline-block;
+        padding-bottom: 5px;
+    }
+
+    .footer-section p {
+        font-size: 0.9rem;
+    }
+
+    .footer-links {
+        list-style: none;
+        padding: 0;
+    }
+
+    .footer-links li {
+        margin-bottom: 10px;
+    }
+
+    .footer-links a {
+        color: #bbb;
+        text-decoration: none;
+        font-size: 0.9rem;
+        transition: color 0.3s;
+    }
+
+    .footer-links a:hover {
+        color: #2282c7;
+    }
+
+    .disclaimer-box {
+        font-size: 0.8rem;
+        background: #2a2a2a;
+        padding: 15px;
+        border-radius: 5px;
+        margin-top: 20px;
+        border-left: 4px solid #2282c7;
+    }
+
+    .footer-bottom {
+        text-align: center;
+        margin-top: 40px;
+        padding-top: 20px;
+        border-top: 1px solid #333;
+        font-size: 0.85rem;
+    }
+
+    .eighteen-plus {
+        display: inline-block;
+        background: #2282c7;
+        color: white;
+        padding: 2px 8px;
+        border-radius: 4px;
+        font-weight: bold;
+        margin-right: 10px;
+    }
+
+    .app-download-section {
+        margin-top: 15px;
+    }
+
+    .play-store-badge {
+        width: 160px; /* Standard size for badges */
+        height: auto;
+        transition: transform 0.2s ease;
+        display: inline-block;
+    }
+
+    .play-store-badge:hover {
+        transform: scale(1.05); /* Slight pop effect on hover */
+    }
    </style>
 </head>
 <body>
@@ -67,25 +160,8 @@
          <button class="report-btn" id="reportBtn">📄 Report</button>
       </div>
 
-      <div class="socials">
-         <a class="media" href="https://twitter.com/visuaLottoBoard" target="_blank" aria-label="connect with us  on our X account" rel="no-referrer">
-            <i class="fa-brands fa-x-twitter" ></i>
-         </a>
-         <a class="media" href="https://www.facebook.com/visuaLottoBoard" target="_blank" aria-label="connect with us on our facebook account">
-            <i class="fa-brands fa-facebook-f"></i>
-         </a>
-         <a class="media" href="https://m.me/109930914660224" target="_blank" aria-label="connect with us on our facebook-messenger">
-            <i class="fa-brands fa-facebook-messenger"></i>
-         </a>
-         <a class="media" href="#">
-            <i class="fa-brands fa-instagram" aria-label="connect with us on our IG story"></i>
-         </a>
-         <a class="media" href="http://www.youtube.com/@VisuaLottoBoard" target="_blank" aria-label="catch our videos on youtube">
-            <i class="fa-brands fa-youtube"></i>
-         </a>
-      </div>
+      <h2>DIAMOND Results</h2>
 
-      <h2>DIAMOND</h2>
     </header>
 
     <!--  Dynamic nav link in Nav-link -->
@@ -95,6 +171,68 @@
 
     <div class="status-message" id="statusMessage">Loading Diamond results...</div>
     <main id="gameContainer"></main>
+
+   <footer class="site-footer">
+      <div class="footer-content">
+         <div class="footer-section">
+            <h3>About Our Results</h3>
+            <p>We provide accurate Baba Ijebu (Premier Lotto) results dating back to late 2023. Our mission is to help players track past winning numbers and stay organized with daily game schedules.</p>
+         </div>
+
+         <div class="footer-section">
+            <h3>Quick Links</h3>
+            <ul class="footer-links">
+                <li><a href="/">Home</a></li>
+               <li><a href="https://visuallottoboard.com/contact">Contact Us</a></li>
+                <li><a href="https://visuallottoboard.com/about">About Us</a></li>
+               <li><a href="/game-schedule.html">Game Time-table</a></li>
+               <li><a href="https://green-lotto-result.visuallottoboard.com" target="_blank">Green Lotto Results</a></li>
+               <li><a href="https://lottoclassificationchart.visuallottoboard.com" target="_blank">Lotto Classification Chart</a></li>
+               <li><a href="https://blog.visuallottoboard.com" target="_blank">Blog</a></li>
+            </ul>
+         </div>
+
+         <div class="app-download-section">
+            <p style="font-size: 0.8rem; margin-bottom: 8px; color: #fff;">Get the App for instant alerts:</p>
+            <a href="https://play.google.com/store/apps/details?id=com.visuallottoboard.babaijeburesults" target="_blank">
+               <img class="play-store-badge" 
+                     src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" 
+                     alt="Get it on Google Play"
+               >
+            </a>
+         </div>
+
+         <div class="socials">
+            <a class="media" href="https://twitter.com/visuaLottoBoard" target="_blank" aria-label="connect with us  on our X account" rel="no-referrer">
+               <i class="fa-brands fa-x-twitter" ></i>
+            </a>
+            <a class="media" href="https://www.facebook.com/visuaLottoBoard" target="_blank" aria-label="connect with us on our facebook account">
+               <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a class="media" href="https://m.me/109930914660224" target="_blank" aria-label="connect with us on our facebook-messenger">
+               <i class="fa-brands fa-facebook-messenger"></i>
+            </a>
+            <a class="media" href="#">
+               <i class="fa-brands fa-instagram" aria-label="connect with us on our IG story"></i>
+            </a>
+            <a class="media" href="http://www.youtube.com/@VisuaLottoBoard" target="_blank" aria-label="catch our videos on youtube">
+               <i class="fa-brands fa-youtube"></i>
+            </a>
+         </div>
+
+         <div class="footer-section">
+            <h3>Responsible Gaming</h3>
+            <p><span class="eighteen-plus">18+</span> Please play responsibly. Lotto is a game of chance.</p>
+            <div class="disclaimer-box">
+                <strong>Disclaimer:</strong> This website is an independent platform for information purposes only. We are not affiliated with Premier Lotto Limited (Baba Ijebu). Our relationship with Premier Lotto is limited to sub-agent. Always verify results with an official company.
+            </div>
+         </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>&copy; <span id="year"></span> Visual Lotto Board. All Rights Reserved.</p>
+      </div>
+   </footer>
 
     <script type="module" src="/scripts/loaders/loadGame.js"></script>
     <script src="../scripts/modal.js"></script>
